fix homepage text overflow bug

--- a/app/assets/stylesheets/ihover_override.css.scss
+++ b/app/assets/stylesheets/ihover_override.css.scss
@@ -22,6 +22,6 @@
 .ih-item.circle.effect4 .info h3 {
   font-size: 14px;
   margin: 0 15px;
-  height: 70px;
-  padding-top: 35px;
+  height: 50px;
+  padding-top: 20px;
 }
